# neo4j-graphrag-python

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .snyk  AGENTS.md  ALPHA_FIX.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MERGE_DEDUP.md  README.md  STRUCT.md  Taskfile.yml  build_kg.py  neo4j-viz.README.md  pr_agent.toml  pyproject.toml  setup_graphviz_env.sh  test_connection.py  test_pygraphviz.py  tox.ini  tutorial.md  visualize_graph.py
.github/: CODEOWNERS  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: 01-report-bug.yaml  02-request-feature.yaml  03-documentation.yaml  04-question.yaml
.github/workflows/: changelog_reminder.yaml  cla-check.yaml  generate_changelog.yaml  generate_changelog.yml  major-release.yaml  minor-release.yaml  patch-release.yaml  pr-e2e-tests.yaml  pr.yaml  pre-release.yaml  premajor-release.yaml  prerelease.yaml  publish.yaml  scheduled-e2e-tests.yaml
.github/workflows/ISSUE_TEMPLATE/: bug.md  feature.md
.plans/: progress-cypher25-search-clause-vector-retrievers.txt  progress-spacy-entity-relation-extractor.txt  tasks-cypher25-search-clause-vector-retrievers.yml  tasks-spacy-entity-relation-extractor.yml
advanced_patterns/: enhanced_rag.py  example.py  medical_kg_pipeline_config.json  retrievers.py  setup_knowledge_graph.py
docs/: Makefile  README.md  conf.py  index.rst
docs/source/: README.md  api.rst  conf.py  index.rst  llm.rst  llm_extensibility.rst  rag.rst  types.rst  user_guide.rst  user_guide_kg_builder.rst  user_guide_pipeline.rst  user_guide_rag.rst
docs/themes/neo4j/: layout.html
examples/: README.md  graphrag.py  graphrag_custom_prompt.py  graphrag_with_langchain_llm.py  graphrag_with_mistral.py  hybrid_cypher_search.py  hybrid_search.py  kg_builder.py  openai_search.py  rag.py  rag_custom_prompt.py  rag_with_observer.py  similarity_search_for_text.py  similarity_search_for_text_mistral.py  similarity_search_for_vector.py  text2cypher_search.py  text_2_cypher_search.py  text_to_cypher_search.py  vector_cypher_retrieval.py  vector_search_with_filters.py
examples/answer/: graphrag.py
examples/automatic_schema_extraction/: schema_from_text.py  simple_kg_pipeline_schema_from_pdf.py
examples/build_graph/: kg_builder_from_pdf.py  simple_kg_builder_from_pdf.py  simple_kg_builder_from_pdf_ollama.py  simple_kg_builder_from_pdf_with_config.py  simple_kg_builder_from_text.py
examples/build_graph/automatic_schema_extraction/: simple_kg_builder_schema_from_pdf.py  simple_kg_builder_schema_from_text.py
examples/build_graph/from_config_files/: simple_kg_pipeline_config.json  simple_kg_pipeline_config.yaml  simple_kg_pipeline_config_url.json  simple_kg_pipeline_from_config_file.py  simple_kg_pipeline_from_config_file_with_url.py
examples/customize/answer/: custom_prompt.py  (+2 more)
examples/data/: embedding_avatar.py  embeddings_avatar.py  extracted_schema.json  extracted_schema.yaml
examples/database_operations/: create_fulltext_index.py  create_vector_index.py  populate_vector_index.py
examples/llms/: custom_llm.py  openai_llm.py
examples/old/: graphrag_with_langchain_llm.py  openai_search.py  vector_cypher_retrieval.py  vector_search_with_filters.py
examples/pinecone/: README.md  text_search.py  vector_search.py
examples/pipeline/: kg_builder.py  kg_builder_example.py  kg_builder_from_pdf.py  kg_builder_from_text.py  kg_builder_with_pdf_loader.py  kg_builder_with_schema.py  kg_builder_with_simple_entity_resolution.py  lexical_graph_from_text.py  rag.py  schema.py  schema_builder.py  temp.py  visualization.py
examples/qdrant/: text_search.py  vector_search.py
examples/question_answering/: graphrag.py  graphrag_with_explain.py  graphrag_with_function_calling.py  graphrag_with_message_history.py  graphrag_with_neo4j_message_history.py  recommendations_explain.py  tool_calling.py
examples/retrieve/: avatar_embeddings.py  cypher_retriever.py  hybrid_cypher_retriever.py  hybrid_retriever.py  similarity_search_for_text.py  similarity_search_for_vector.py  text2cypher_search.py  vector_cypher_retriever.py
examples/tool_calls/: openai_tool_calls.py
examples/weaviate/: README.md  text_search_local_embedder.py  text_search_remote_embedder.py  vector_search.py
neo4j_genai/: tools.py
neo4j_genai/src/: client.py  data_validators.py  embeddings.py
neo4j_genai/tests/: test.py  test2.py
neo4j_genai_python/src/: client.py
src/neo4j_genai/: __init__.py  client.py  embedder.py  embeddings.py  exceptions.py  filters.py  indexes.py  llm.py  neo4j_queries.py  observers.py  prompts.py  queries.py  retrievers.py  schema.py  types.py  utils.py
src/neo4j_graphrag/: __init__.py  exceptions.py  filters.py  indexes.py  indexes_2.py  message_history.py  neo4j_queries.py  schema.py  tool.py  types.py  utils.py
tests/: conftest.py  test_client.py  test_indexes.py  test_neo4j_queries.py  test_queries.py  test_retrievers.py
tests/e2e/: conftest.py  docker-compose.neo4j2026.yml  docker-compose.yml  populate_neo4j.py  pytest.ini  test_entity_resolver_component_e2e.py  test_graphrag_e2e.py  test_graphrag_v2_e2e.py  test_hybrid_e2e.py  test_indexes_e2e.py  test_kb_builder_pipeline_e2e.py  test_kg_builder_e2e.py  test_kg_builder_pipeline_e2e.py  test_kg_construction_e2e.py  test_kg_writer_component_e2e.py  test_lexical_graph_builder_component_e2e.py  test_message_history_e2e.py  test_neo4j_reader_component_e2e.py  test_rag_e2e.py  test_schema_e2e.py  test_schema_filters_e2e.py  test_search_clause_e2e.py  test_simplekgpipeline_e2e.py  test_t2c_e2e.py  test_text2cypher_e2e.py  test_vector_e2e.py  utils.py
tests/retrievers/: test_base.py  test_vector.py
tests/unit/: conftest.py  test_core_graph.py  test_core_orchestrator.py  test_core_pipeline.py  test_core_store.py  test_explain.py  test_explain_recommendations.py  test_filters.py  test_graphrag.py  test_graphrag_v2.py  test_indexes.py  test_message_history.py  test_neo4j_queries.py  test_prompt_template.py  test_rag.py  test_recommendations_explain.py  test_schema.py  test_search_clause.py  test_store.py  test_text_splitters.py
(+470 files in other folders)
