# Copyright (c) "Neo4j"
# Neo4j Sweden AB [https://neo4j.com]
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[tool.poetry]
name = "neo4j-graphrag"
version = "1.0.0a1"
description = "Python package to allow easy integration to Neo4j's GraphRAG features"
authors = ["Neo4j, Inc <team-gen-ai@neo4j.com>"]
license = "Apache License, Version 2.0"
readme = "README.md"
homepage = "https://neo4j.com/"
repository = "https://github.com/neo4j/neo4j-graphrag-python"

[[tool.poetry.packages]]
include = "neo4j_graphrag"
from = "src"

[tool.poetry.dependencies]
python = "^3.9.0"
neo4j = "^5.17.0"
pydantic = "^2.6.3"
weaviate-client = {version = "^4.6.1", optional = true}
pinecone-client = {version = "^4.1.0", optional = true}
types-mock = "^5.1.0.20240425"
eval-type-backport = "^0.2.0"
pypdf = "^4.3.1"
fsspec = "^2024.9.0"
pygraphviz = [
    {version = "^1.13.0", python = ">=3.10,<4.0.0", optional = true},
    {version = "^1.0.0", python = "<3.10", optional = true}
]
google-cloud-aiplatform = {version = "^1.66.0", optional = true}
cohere = {version = "^5.9.0", optional = true}
anthropic = { version = "^0.34.2", optional = true}
mistralai = {version = "^1.0.3", optional = true}

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
mypy = "^1.10.0"
pytest = "^8.0.2"
pytest-mock = "^3.12.0"
pre-commit = { version = "^3.6.2", python = "^3.9" }
coverage = "^7.4.3"
ruff = "^0.3.0"
langchain-openai = "^0.1.1"
weaviate-client = "^4.6.1"
sentence-transformers = "^3.0.0"
pinecone-client = "^4.1.0"
langchain-community = "^0.2.0"
requests = "^2.32.0"
sphinx = { version = "^7.2.6", python = "^3.9" }
langchain-huggingface = "^0.0.3"
tox = "^4.15.1"
numpy = [
    {version = "^1.24.0", python = "<3.12"},
    {version = "^1.26.0", python = ">=3.12"}
]
scipy = [
    {version = "^1", python = "<3.12"},
    {version = "^1.7.0", python = ">=3.12"}
]
llama-index = "^0.10.55"
pytest-asyncio = "^0.23.8"
pygraphviz = [
    {version = "^1.13.0", python = ">=3.10,<4.0.0"},
    {version = "^1.0.0", python = "<3.10"}
]
google-cloud-aiplatform = {version = "^1.66.0"}
cohere = {version = "^5.9.0"}
anthropic = { version = "^0.34.2"}
mistralai = {version = "^1.0.3"}


[tool.poetry.extras]
external_clients = ["weaviate-client", "pinecone-client", "google-cloud-aiplatform", "cohere", "anthropic", "mistralai"]
kg_creation_tools = ["pygraphviz"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "",
]

[tool.coverage.paths]
source = ["src"]

[tool.pylint."MESSAGES CONTROL"]
disable="C0114,C0115"

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
disallow_untyped_calls = false
exclude = ["docs"]

[[tool.mypy.overrides]]
module = [
    "weaviate.*",
    "sentence_transformers.*",
    "conftest",
]
ignore_missing_imports = true
